--- a/404.html
+++ b/404.html
@@ -3,8 +3,13 @@ permalink: /404.html
 layout: default
 ---
 
-<div>
-  <h1>Page not found :(</h1>
+<div class="text-center mt-5">
+  <h1>
+    <i class="fa fa-ban" aria-hidden="true"></i>
+  </h1>
+  <h3>
+    Page not found
+  </h3>
 
-  <p>The requested page could not be found.</p>
+  <p style="opacity: .5;">The requested page could not be found.</p>
 </div>
