--- a/career.html
+++ b/career.html
@@ -2,7 +2,7 @@
 permalink: /career
 ---
 
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
+{% include head.html %}
 
 <style type="text/css">
     @font-face {
