--- a/career.html
+++ b/career.html
@@ -326,7 +326,7 @@ exclude_base_css: true
     <section id="intro" class="text-center" data-page="1">
         <div>
             <h2>“효율적으로 일하는 걸 좋아하는”</h2>
-            <h2>9년차 개발자 <span class="text-primary">김미라</span></h2>
+            <h2>개발자 <span class="text-primary">김미라</span></h2>
 
             <img src="/asset/images/career/step1-cover.jpg" width="400"/>
         </div>
