--- a/career.html
+++ b/career.html
@@ -376,7 +376,7 @@ exclude_base_css: true
                             <ul>
                                 <li>Spring Framework + Java</li>
                                 <li>.Net Framework + C#</li>
-                                <li>AWS Lambda + nodeJS</li>
+                                <li>nodeJS (AWS Lambda)</li>
                             </ul>
                         </div>
                     </div>
@@ -518,7 +518,7 @@ exclude_base_css: true
                         <li>S3</li>
                         <li>CloudWatch</li>
                         <li>API Gateway</li>
-                        <li>Lambda</li>
+                        <li>Lambda(nodeJS)</li>
                         <li>Step Functions ...</li>
                     </ul>
                 </ul>
