--- a/career.html
+++ b/career.html
@@ -320,9 +320,29 @@ exclude_base_css: true
         font-size: 1.5em;
     }
 
-    #table-of-contents .contents {
-        font-size: 1.3em;
+    #table-of-contents [data-step] {
+        font-size: 1.4em;
         padding: 0;
+        margin-block-end: 3em;
+    }
+
+    #table-of-contents [data-step]:before {
+        content: attr(data-step);
+        border: 1px solid #f5f5f5;
+        background: #34537b29;
+        padding: .25em .5em;
+        margin-right: .8em;
+        border-radius: 5px;
+    }
+
+    #table-of-contents [data-step]:first-child:before {
+        padding: .25em .6em;
+    }
+
+    #table-of-contents [data-step] ul {
+        margin-left: 1.5em;
+        font-size: .85em;
+        opacity: .8;
     }
 
 </style>
@@ -345,15 +365,16 @@ exclude_base_css: true
         </h1>
 
         <div class="contents mt-4">
-            <ul>
-                <li>Careeres</li>
-                <li class="mt-1">Experiences</li>
+            <div data-step="1">Careers</div>
+            <div data-step="2">
+                Experiences
+
                 <ul>
                     <li>Web - Application</li>
                     <li>Web - Tech</li>
                 </ul>
-                <li class="mt-1">Impressive Projects</li>
-            </ul>
+            </div>
+            <div data-step="3">Impressive Projects</div>
         </div>
     </section>
 
