--- a/career.html
+++ b/career.html
@@ -408,10 +408,7 @@ exclude_base_css: true
                                 <ul>
                                     <li>.Net Framework + xaml</li>
                                 </ul>
-                                <li>QT</li>
-                                <ul>
-                                    <li>qss, qml</li>
-                                </ul>
+                                <li>QT + qss, qml</li>
                                 <li>Android</li>
                                 <ul>
                                     <li>xml</li>
