--- a/404.html
+++ b/404.html
@@ -1,15 +1,10 @@
 ---
 permalink: /404.html
-layout: default
+layout: error
 ---
 
-<div class="text-center mt-5">
-  <h1>
-    <i class="fa fa-ban" aria-hidden="true"></i>
-  </h1>
-  <h3>
-    Page not found
-  </h3>
+<div>
+  <h3>Page not found</h3>
 
-  <p style="opacity: .5;">The requested page could not be found.</p>
+  <p>The requested page could not be found.</p>
 </div>
