--- a/404.html
+++ b/404.html
@@ -3,8 +3,11 @@ permalink: /404.html
 layout: error
 ---
 
-<div>
-  <h3>Page not found</h3>
+<div class="my-10">
+  <h3 class="message mb-5">
+    <i class="fas fa-ban icon mb-1"></i>
+    Page not found
+  </h3>
 
-  <p>The requested page could not be found.</p>
+  <p class="message-detail">The requested page could not be found</p>
 </div>
