--- a/404.html
+++ b/404.html
@@ -1,13 +1,16 @@
 ---
 permalink: /404.html
-layout: error
+layout: default
+type: error
 ---
 
-<div class="my-10">
-  <h3 class="message mb-5">
-    <i class="fas fa-ban icon mb-1"></i>
-    Page not found
-  </h3>
+<section class="content-wrapper">
+  <div class="my-10">
+    <h3 class="message mb-5">
+      <i class="fas fa-ban icon mb-1"></i>
+      Page not found
+    </h3>
 
-  <p class="message-detail">The requested page could not be found</p>
-</div>
+    <p class="message-detail">The requested page could not be found</p>
+  </div>
+</section>
