--- a/404.html
+++ b/404.html
@@ -5,12 +5,14 @@ type: error
 ---
 
 <section class="content-wrapper">
-  <div class="my-10">
-    <h3 class="message mb-5">
-      <i class="fas fa-ban icon mb-1"></i>
-      Page not found
+  <div class="mt-15">
+    <h3 class="message">
+      <i class="fas fa-skull-crossbones icon mb-1"></i>
+      못 찾겠다..
     </h3>
 
-    <p class="message-detail">The requested page could not be found</p>
+    <p class="message-detail">
+      페이지 주소를 다시 확인해 주세요
+    </p>
   </div>
 </section>
